--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1501,7 +1501,7 @@ div .ra-receta-container {
   font-size: 13px;
   margin: 0 5px 0 5px;
 }
-.ra-information-attributes li input, .ra-information .ra-beer-attributes li p input, .ra-name p input {
+input, .ra-name p input {
   border-radius: 3px;
   margin-right: 20px;
   border: 1px solid #c4c4c4;
