--- a/views/sales/productCart.ejs
+++ b/views/sales/productCart.ejs
@@ -8,7 +8,7 @@
     <!-- Header-->
     <%- include("../partials/header") %>
     <!-- <section id="formulario" > -->
-        <form action="/sales/shoppingCart" method="POST" id="formProductCart>
+        <form action="/sales/shoppingCart" method="POST" id="formProductCart">
             <main class="pc-main">
                 <section class="pc-cart"> 
                         <div class="pc-product-group">
@@ -18,12 +18,12 @@
                                 <div class="pd-tienda">
                                     <% for (i=0;i< products_Detail.length;i++){%>
                                         <article class="col-12 col-sm-6 col-lg-3 pd-product">
-                                            <img class="pd-img-product" src="/images/<%= products_Detail[i].Product.image %>" width="100" alt="beer"> 
+                                            <img class="pd-img-product" src="/images/<%= products_Detail[i].Products.image %>" width="100" alt="beer"> 
                                             <div class="pd-datos-cerveza">
-                                                <h4><%= products_Detail[i].Product.name %></h4>
-                                                <h4 > Cantidad: <input type="number" id="spinButton<%= products_Detail[i].Product.id %>"  value="<%= products_Detail[i].quantity %>" onclick="calculate(<%= products_Detail[i].Product.id %>)" class=""> </h4>
+                                                <h4><%= products_Detail[i].Products.name %></h4>
+                                                <h4 > Cantidad: <input type="number" id="spinButton<%= products_Detail[i].Products.id %>"  value="<%= products_Detail[i].quantity %>" onclick="calculate(<%= products_Detail[i].Products.id %>)" class=""> </h4>
                                                 
-                                                <h4 name="<%= products_Detail[i].Product.id %>" id="price<%= products_Detail[i].Product.id %>">$ <%= products_Detail[i].Product.price %></h4>
+                                                <h4 name="<%= products_Detail[i].Products.id %>" id="price<%= products_Detail[i].Products.id %>">$ <%= products_Detail[i].Products.price %></h4>
                                             </div>
                                         </article>
                                     <%}%>
@@ -128,29 +128,8 @@
             <%- include("../partials/footer") %>
         </form>
     <!-- </section> -->
-    <script>
-        const a = []
-        
-        //const inputs = document.querySelectorAll("#formRegister input");
-        //const inputs = document.querySelectorAll("#formProductCart input");
-        
-        //inputs.forEach((input) => {
-       
-        //input.addEventListener("keyup", validarFormulario);
-        //input.addEventListener("blur", validarFormulario);
-        //input.addEventListener("change", valExtFile);
-
-  //});
-
-        function calculate(id){  
-
-            elemento = document.getElementById("price" + id);
-            counter = document.getElementById("spinButton" + id).value;
-            console.log(counter)
-            const price = document.getElementById("price" + id).textContent
-
-            elemento.textContent = "$ " + price.slice(2,price.length)*counter}
-   </script>
+    <script src="/Js/cartFront.js">
+    </script>
 </body>
 
 </html>
