--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -7,7 +7,7 @@
     <!-- Header-->
     <%- include("../partials/header") %>
     <section> 
-        <label><h3>REGISTRO NUEVO USUARIO</h3></label>
+        <label><h3 id="title">REGISTRO NUEVO USUARIO</h3></label>
         <form action="/users/register" class="rg-form" method="POST" enctype="multipart/form-data" id="formRegister">
             <div>
             <label><b>Nombre *</b></label>
