--- a/views/sales/productCart.ejs
+++ b/views/sales/productCart.ejs
@@ -7,39 +7,37 @@
 <body>
     <!-- Header-->
     <%- include("../partials/header") %>
-    <!-- <section id="formulario" > -->
-      <!--  <form action="/sales/shoppingCart" method="POST" id="formProductCart">  -->
-            <main class="pc-main">
+    
+       <form action="/sales/shoppingCart" method="POST" id="formProductCart">
+           
                 <section class="pc-cart"> 
                         <div class="pc-product-group">
                             <div class="pc-product-cantidad">
                                
-
-                                <div class="pd-tienda">
+                                <div class="shopping-cart-items" id="shoppingCartItemsContainer" >
                                     <% for (i=0;i< products_Detail.length;i++){%>
-                                        <article class="col-12 col-sm-6 col-lg-3 pd-product">
-                                            <img class="pd-img-product" src="/images/<%= products_Detail[i].Products.image %>" width="100" alt="beer"> 
-                                            <div class="pd-datos-cerveza">
-                                                <h4><%= products_Detail[i].Products.name %></h4>
-                                                <h4> ID: <input type="text" id="<%= products_Detail[i].Products.id %>" value="<%= products_Detail[i].Products.id %>"> </h4>
-                                                <h4><%= products_Detail[i].Products.id %></h4>
-                                                <h4>
-                                                <!-- <button type="button" id="buttonMinus<%= products_Detail[i].Products.id %>"  class="far fa-minus-square" > </button> -->
-                                                <button  id="add"  class="far fa-plus-square" ></button>
-                                                <input type="text" id="quantity5" value="10" class="quantity">
-                                                <button  id="subtrat"  class="far fa-minus-square" ></button>
-                                                <!-- <button type="button" id="buttonPlus<%= products_Detail[i].Products.id %>"  class="far fa-plus-square"  >  -->
-                                                </h4>
-                                                <!-- <h4 name="price<%= products_Detail[i].Products.id %>" id="price<%= products_Detail[i].Products.id %>" >$ <%= products_Detail[i].Products.price %></h4> -->
-                                                <h4> <input  type="hidden" id="price<%= products_Detail[i].Products.id %>" value="<%= products_Detail[i].Products.price %>" class="price">  </h4>
-                                                <div type="text" id="msgFront_Cart" > "<%= products_Detail[i].Products.price %>" </div>
-                                            </div>
-                                        </article>
+                                        <div class="pc-row shoppingCartItem" id="shoppingCartItem">                                         
+                                                <div class="shopping-cart-item">
+                                                    <img src="/images/<%= products_Detail[i].Products.image %>" class="pc-shopping-cart-image" id="product-image">
+                                                    <h6 class="shopping-cart-item-title shoppingCartItemTitle " id="product-name"><%= products_Detail[i].Products.name %></h6>
+                                                    <h4 type="hidden" id="price<%= products_Detail[i].Products.id %>">  </h4>
+                                                    <p class="shopping-cart-price" id="shoppingCartItemPrice"><%= products_Detail[i].Products.price %></p>
+                                                </div>
+                                                <div
+                                                    class="shopping-cart-quantity ">
+                                                    <input class="pc-shopping-cart-quantity-input " id="shoppingCartItemQuantity" type="number" value="1">
+                                                    <button class="btn pc-btn-danger" id="buttonDelete" type="button">X</button>
+                                                </div>                                          
+                                        </div>                                       
                                     <%}%>
+
+                                    <div class="subtotal">
+                                        <label name="subtotal" class="pc-ResumenCompra-detalle-texto" >Subtotal</label>                
+                                        <label class=".pc-counter-label-det-label2" >ARS</label>
+                                        <p type="number" class="pc-counter-label-det-valor" name="subtotal" id="subtotal" value="" > 0 </p>       
+                                    </div>
                                </div>
 
-                               
-    
 
                                     <div class="pc-direccionEnvio">
                                         <div class="pc-direccionEnvio-detalle">
@@ -77,7 +75,6 @@
 
                         </div>
 
-                    
 
                         <div class="pc-ResumenCompra">
                             <div class="pc-ResumenCompra-Titulo">
@@ -85,10 +82,7 @@
                             </div>
                             <div class="pc-ResumenCompra-Subtotal">
                                 <div class="pc-ResumenCompra-Subtotal-texto">
-                                    <div class="pc-ResumenCompra-detalle">
-                                        <label name="subtotal" class="pc-ResumenCompra-detalle-texto" >Subtotal</label> 
-                                        <h4 > Subtotal: <input type="text" id="subtotal" > </h4>
-                                    </div>
+                                    
                                     <div  class="pc-ResumenCompra-detalle">
                                         <label name="descuento" class="pc-ResumenCompra-detalle-texto" required>Descuento</label> 
                                     </div>
@@ -102,10 +96,7 @@
                                 </div>
 
                                 <div class="pc-ResumenCompra-Subtotal-valores">
-                                    <div class="pc-counter-ResumenCompra">
-                                        <label class=".pc-counter-label-det-label2" >ARS</label>
-                                        <input type="text" class="pc-counter-label-det-valor" name="subtotal" value="900" title="subtotal" placeholder="" readonly="readonly">
-                                    </div>
+                                    
                                     <div class="pc-counter-ResumenCompra">
                                         <label class=".pc-counter-label-det-label2" >ARS</label>
                                         <input type="text" class="pc-counter-label-det-valor" name="totalDiscount" value="100" title="totalDiscount" placeholder="" readonly="readonly">
@@ -117,11 +108,7 @@
                                     <div class="pc-counter-ResumenCompra">
                                         <label class=".pc-counter-label-det-label2" >ARS</label>
                                         <input type="text" class="pc-counter-label-det-valor" name="total" value="1250" title="total" placeholder="" readonly="readonly">
-                                    </div>
-                                        
-                                    
-                                    <!-- <input type="text" class="pc-ResumenCompra-Titulo-caja-texto" name="quantity"
-                                                value="ARS 1050" title="Cantidad" placeholder="" inputmode="text"> -->
+                                    </div>                                   
                                 </div>  
                                 
                             </div>
@@ -129,17 +116,19 @@
                             <div class="pc-options">
                                 <button class="pc-options-button lg-button" type="submit">Finalizar Compra</button>
                             </div> 
-                            </div>     
+                                 
                         </div>
-                    </div>
+                    
                 </section>
-            </main>
+          
+        </form> 
             <!-- Footer-->
             <%- include("../partials/footer") %>
-        <!-- </form>  -->
-    <!-- </section> -->
-    <script src="/Js/cartFront.js"> 
-    </script> 
+        
+    
+    <script src="/Js/cartFront.js"> </script> 
+  
+
 </body>
 
 </html>
